--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <div class="col-md-6 goal" data-bind="with: bankersOnboarded()" >
                    
-                            <h2 class="goal-heading">Phone Onboarded</h2>
+                            <h2 class="goal-heading">Callers Onboarded</h2>
                             <div class="goal-label"><span data-bind="text:current"></span>/<span data-bind="text:goal"></span>&nbsp;people</div>
                             <progress-bar-yang params="progress: current/goal " ></progress-bar-yang>
                         </div>
